@@ -404,7 +404,10 @@ void XMLHttpRequest::send(const String& body, ExceptionCode& ec)
         String contentType = getRequestHeader("Content-Type");
         if (contentType.isEmpty()) {
             ExceptionCode ec = 0;
-            setRequestHeader("Content-Type", "application/xml", ec);
+            if (m_doc->frame() && m_doc->frame()->settings()->usesDashboardBackwardCompatibilityMode())
+                setRequestHeader("Content-Type", "application/x-form-urlencoded", ec);
+            else
+                setRequestHeader("Content-Type", "application/xml", ec);
             ASSERT(ec == 0);
         }
 
